resizing image to square to fix clip path issues with alignment

--- a/melissa.css
+++ b/melissa.css
@@ -1,4 +1,6 @@
+:root {
 
+}
 
 body {
   margin: 0 auto;
@@ -8,6 +10,7 @@ body {
 }
 
 .background {
+  /* display: flex; */
   width: 100%;
   height: auto;
   position: relative;
@@ -23,7 +26,7 @@ body {
   height: 100vh;
   background-color: #01c3cc;
   clip-path: polygon(100% 0, 100% 100%, 0 100%);
-  -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(100% 30%, 100% 100%, 0 100%, 0 70%);
 }
 .nav {
   left: -100%;
@@ -51,18 +54,21 @@ body {
 
 
 .content {
+  display: flex;
   position: relative;
-  display: grid;
-  width: 100%;
-  grid-template-columns: minmax(1em, 1fr);
-  place-items: center;
-  transform: translateY(15%);
+  justify-content: center;
+  align-items: center;
+  /* max-height: 60%; */
+  /* width: 100%; */
+  /* grid-template-columns: minmax(1em, 1fr); */
+  /* place-items: center; */
+  /* transform: translateY(15%); */
   height: 100vh;
 }
 
 .headshot {
-  max-width: 60%;
-  height: auto;
-  clip-path: circle(35% at 52% 30%); 
-  -webkit-clip-path: circle(35% at 52% 30%); 
+  max-width: 70%;
+  max-height: 70%;
+  clip-path: circle(50%); 
+  -webkit-clip-path: circle(50%); 
 }
